==> buianhhuy96/Master_Study/Projects/Thesis - Indoor Positioning and Navigation/Main/Src/HMC5883L.c <==
#include "DefineAll.h"
	#include <math.h>
	#include <stdio.h>
	#include <stdlib.h>

void HMC5883L_Initialize() 
{
    // write CONFIG_A register

    uint8_t tmp = (HMC5883L_AVERAGING_1 << (HMC5883L_CRA_AVERAGE_BIT - HMC5883L_CRA_AVERAGE_LENGTH + 1)) |
                  (HMC5883L_RATE_30     << (HMC5883L_CRA_RATE_BIT - HMC5883L_CRA_RATE_LENGTH + 1)) |
                  (HMC5883L_BIAS_NORMAL << (HMC5883L_CRA_BIAS_BIT - HMC5883L_CRA_BIAS_LENGTH + 1)) ;
    HMC5883L_I2C_ByteWrite(HMC5883L_DEFAULT_ADDRESS, &tmp ,HMC5883L_RA_CONFIG_A);
    
    // write CONFIG_B register
    HMC5883L_SetGain(HMC5883L_GAIN_1090);
	
    // write MODE register
    HMC5883L_SetMode(HMC5883L_MODE_CONTINUOUS);
}

void HMC5883L_I2C_ByteWrite(uint8_t slaveAddr, uint8_t* pBuffer, uint8_t WriteAddr)
{
//  ENTR_CRT_SECTION();

  /* Send START condition */
  LL_I2C_GenerateStartCondition(HMC5883L_I2C);

  /* Test on EV5 and clear it */
  while(!(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_SB(HMC5883L_I2C)));

  /* Send HMC5883 address for write */
  LL_I2C_TransmitData8(HMC5883L_I2C, (slaveAddr & ((uint8_t)~((uint8_t)I2C_OAR1_ADD0))));

  /* Test on EV6 and clear it */
  while(!(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_ADDR(HMC5883L_I2C) && LL_I2C_IsActiveFlag_TXE(HMC5883L_I2C) && LL_I2C_GetTransferDirection(HMC5883L_I2C)));

  /* Send the HMC5883L internal address to write to */
  LL_I2C_TransmitData8(HMC5883L_I2C, WriteAddr);

  /* Test on EV8 and clear it */
  while(!(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_TXE(HMC5883L_I2C) && LL_I2C_IsActiveFlag_BTF(HMC5883L_I2C) && LL_I2C_GetTransferDirection(HMC5883L_I2C)));

  /* Send the byte to be written */
  LL_I2C_TransmitData8(HMC5883L_I2C, *pBuffer);

  /* Test on EV8 and clear it */
  while(!(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_TXE(HMC5883L_I2C) && LL_I2C_IsActiveFlag_BTF(HMC5883L_I2C) && LL_I2C_GetTransferDirection(HMC5883L_I2C)));

  /* Send STOP condition */
  LL_I2C_GenerateStopCondition(HMC5883L_I2C);
 // EXT_CRT_SECTION();

}

void HMC5883L_I2C_BufferRead(uint8_t slaveAddr, uint8_t* pBuffer, uint8_t ReadAddr, uint16_t NumByteToRead)
{
 // ENTR_CRT_SECTION();

  /* While the bus is busy */
  while(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C));

  /* Send START condition */
  LL_I2C_GenerateStartCondition(HMC5883L_I2C);

  /* Test on EV5 and clear it */
  while(!(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_SB(HMC5883L_I2C)));

  /* Send HMC5883L_Magn address for write */ // Send HMC5883L address for write 
  LL_I2C_TransmitData8(HMC5883L_I2C, (slaveAddr & ((uint8_t)~((uint8_t)I2C_OAR1_ADD0))));

  /* Test on EV6 and clear it */
  while(!(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_ADDR(HMC5883L_I2C) && LL_I2C_IsActiveFlag_TXE(HMC5883L_I2C) && LL_I2C_GetTransferDirection(HMC5883L_I2C)));

  /* Clear EV6 by setting again the PE bit */
  LL_I2C_Enable(HMC5883L_I2C);

  /* Send the HMC5883L's internal address to write to */
  LL_I2C_TransmitData8(HMC5883L_I2C, ReadAddr);

  /* Test on EV8 and clear it */
  while(!(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_TXE(HMC5883L_I2C) && LL_I2C_IsActiveFlag_BTF(HMC5883L_I2C) && LL_I2C_GetTransferDirection(HMC5883L_I2C)));

  /* Send STRAT condition a second time */
  LL_I2C_GenerateStartCondition(HMC5883L_I2C);

  /* Test on EV5 and clear it */
  while(!(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_SB(HMC5883L_I2C)));

  /* Send HMC5883L address for read */
  LL_I2C_TransmitData8(HMC5883L_I2C,(slaveAddr | I2C_OAR1_ADD0));

  /* Test on EV6 and clear it */
  while(!(LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_ADDR(HMC5883L_I2C)));

  /* While there is full_message to be read */
  while(NumByteToRead)
  {
    if(NumByteToRead == 1)
    {
      /* Disable Acknowledgement */
      LL_I2C_AcknowledgeNextData(HMC5883L_I2C, LL_I2C_NACK);

      /* Send STOP Condition */
      LL_I2C_GenerateStopCondition(HMC5883L_I2C);
    }

    /* Test on EV7 and clear it */
    if((LL_I2C_IsActiveFlag_BUSY(HMC5883L_I2C) && LL_I2C_IsActiveFlag_MSL(HMC5883L_I2C) && LL_I2C_IsActiveFlag_RXNE(HMC5883L_I2C)))
    {
      /* Read a byte from the HMC5883L */
      *pBuffer = LL_I2C_ReceiveData8(HMC5883L_I2C);

      /* Point to the next location where the byte read will be saved */
      pBuffer++;

      /* Decrement the read bytes counter */
      NumByteToRead--;
    }
  }

  /* Enable Acknowledgement to be ready for another reception */
  LL_I2C_AcknowledgeNextData(HMC5883L_I2C, LL_I2C_ACK);
//  EXT_CRT_SECTION();

}
